// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search disabled 1`] = `
<form
  class="inline-flex"
>
  <input
    class="border-gray-400 border placeholder-gray-600 focus:outline-none focus:shadow-outline focus:border-primary-500 focus:bg-white disabled:opacity-75 disabled:cursor-not-allowed rounded py-2 px-4 text-sm rounded-full flex-1 border-r-0 rounded-tr-none rounded-br-none"
    disabled=""
    id="foo"
    placeholder="type the text"
    value=""
  />
  <button
    class="flex rounded-full transition-all font-semibold duration-200 ease-in shadow hover:shadow-md focus:outline-none focus:shadow-outline disabled:cursor-not-allowed disabled:opacity-75 px-4 py-2 text-sm bg-primary-500 text-white hover:bg-primary-600 active:bg-primary-700 flex-shrink-0 border-l-0 rounded-tl-none rounded-bl-none"
    disabled=""
    rel="noreferrer"
    target="_blank"
  >
    <span>
      Search
    </span>
  </button>
</form>
`;

exports[`Search large 1`] = `
<form
  class="inline-flex"
>
  <input
    class="border-gray-400 border placeholder-gray-600 focus:outline-none focus:shadow-outline focus:border-primary-500 focus:bg-white disabled:opacity-75 disabled:cursor-not-allowed rounded py-3 px-5 text-base rounded-full flex-1 border-r-0 rounded-tr-none rounded-br-none"
    id="foo"
    placeholder="Type the text"
    value=""
  />
  <button
    class="flex rounded-full transition-all font-semibold duration-200 ease-in shadow hover:shadow-md focus:outline-none focus:shadow-outline disabled:cursor-not-allowed disabled:opacity-75 px-5 py-3 text-base bg-primary-500 text-white hover:bg-primary-600 active:bg-primary-700 flex-shrink-0 border-l-0 rounded-tl-none rounded-bl-none"
    rel="noreferrer"
    target="_blank"
  >
    <span>
      Search
    </span>
  </button>
</form>
`;

exports[`Search normal 1`] = `
<form
  class="inline-flex"
>
  <input
    class="border-gray-400 border placeholder-gray-600 focus:outline-none focus:shadow-outline focus:border-primary-500 focus:bg-white disabled:opacity-75 disabled:cursor-not-allowed rounded py-2 px-4 text-sm rounded-full flex-1 border-r-0 rounded-tr-none rounded-br-none"
    id="foo"
    placeholder="Type the text"
    value=""
  />
  <button
    class="flex rounded-full transition-all font-semibold duration-200 ease-in shadow hover:shadow-md focus:outline-none focus:shadow-outline disabled:cursor-not-allowed disabled:opacity-75 px-4 py-2 text-sm bg-primary-500 text-white hover:bg-primary-600 active:bg-primary-700 flex-shrink-0 border-l-0 rounded-tl-none rounded-bl-none"
    rel="noreferrer"
    target="_blank"
  >
    <span>
      Search
    </span>
  </button>
</form>
`;
